--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -24,8 +24,8 @@
         }
     }
     &-close {
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
         position: absolute;
         background: url("/img/btn/close.png");
         background-position: center;
@@ -42,7 +42,6 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
-        border-radius: 50%;
         left: 50%;
         transform: translateX(-50%);
         top: -100px;
@@ -56,6 +55,10 @@
         line-height: 34px;
     }
     &-body {
+        &--main {
+            color: $body;
+            font-weight: 600;
+        }
         padding-left: 30px;
         padding-right: 30px;
         color: $caption-top;
