--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ body {
 
 h1 {
   color: #ff4040;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Metropolis", sans-serif;
   font-size: 50px;
 }
 
