--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -76,7 +76,7 @@
             width: 130px;
             height: 50px;
             display: inline-block;
-            font-family: $montserrat;
+            font-family: $metropolis;
             font-size: 18px;
             line-height: 50px;
             font-weight: 600;
