--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -12,9 +12,9 @@
 }
 
 .media-sel {
-    margin-top: 10px;
+    margin-top: 15px;
     width: 100%;
-    height: 50px;
+    height: 35px;
     border-bottom: 2px solid $bot-level;
     position: relative;
     @include transition-ease(.25s);
@@ -49,15 +49,16 @@
     }
 
     &-item {
-        margin-right: 30px;
-        height: 50px;
+        margin-right: 20px;
+        height: 35px;
         display: inline-block;
         cursor: pointer;
         position: relative;
         &-title {
             color: $top-level;
-            font-family: $montserrat;
-            font-size: 30px;
+            font-family: $metropolis;
+            font-size: 21px;
+            font-weight: 500;
             margin: 0px;
             text-align: center;
             @include transition-ease(.25s);
@@ -90,13 +91,8 @@
 
 @media (max-width: 1280px) {
     .media-sel {
-        height: 43px;
         &-item {
-            height: 43px;
             margin-right: 20px;
-            &-title {
-                font-size: 25px;
-            }
         }
     }
 }
@@ -105,7 +101,7 @@
     //nav-padding changed to 30px
     .media-sel {
         &-item {
-            margin-right: 15px;
+            margin-right: 17px;
             &:first-child {
                 margin-left: 30px;
             }
@@ -116,30 +112,11 @@
 @media (max-width: 425px) {
     //nav-padding changed to 20px
     .media-sel {
-        height: 40px;
-        &-item {
-            height: 40px;
-            &-title {
-                font-size: 25px;
-            }
-            &--selected {
-                &::after {
-                    bottom: 0px;
-                    height: 4px;
-                }
-            }
-        }
-    }
-}
-
-
-@media (max-width: 375px) {
-    .media-sel {
         height: 33px;
-        &-cont {
-            margin-top: 0px;
-        }
         &-item {
+            &:first-child {
+                //margin-left: 20px;
+            }
             height: 33px;
             &--selected {
                 &::after {
@@ -153,6 +130,16 @@
             &-title {
                 font-size: 20px;
             }
+        }
+    }
+}
+
+
+@media (max-width: 375px) {
+    .media-sel {
+        height: 33px;
+        &-cont {
+            margin-top: 0px;
         }
     }
 }
