--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -22,7 +22,7 @@ $grad-gryw: linear-gradient(to right, $green, mix($green, $yellow));
 $title-fade: linear-gradient(to left, $mid-level, $mid-level-tr);
 
 $nunito: "Nunito", sans-serif;
-$montserrat: "Montserrat", sans-serif;
+$metropolis: "Metropolis", sans-serif;
 $roboto: "Roboto", sans-serif;
 
 @mixin transition-ease($timing) {
