--- a/scss/upcoming.scss
+++ b/scss/upcoming.scss
@@ -48,7 +48,7 @@ body {
 
 h1 {
     color: $white;
-    font-family: $montserrat;
+    font-family: $metropolis;
     font-size: 50px;
     padding-left: 50px;
     margin-top: 20px;
