--- a/scss/watchlist.scss
+++ b/scss/watchlist.scss
@@ -41,7 +41,7 @@ body {
 
 h1 {
     color: $white;
-    font-family: $montserrat;
+    font-family: $metropolis;
     font-size: 50px;
     padding-left: 50px;
     margin-top: 20px;
